<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('user_points', function (Blueprint $table) {
            $table->id();
            $table->unsignedBigInteger('user_id')->unique();
            $table->integer('balance')->default(0)->comment('Current available points');
            $table->integer('pending_balance')->default(0)->comment('Pending points (not yet available)');
            $table->integer('total_earned')->default(0)->comment('Lifetime points earned');
            $table->integer('total_redeemed')->default(0)->comment('Lifetime points redeemed');
            $table->timestamps();
            
            // Foreign key constraints
            
            // Indexes for better performance
            $table->index('balance');
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('user_points');
    }
};

